# ros2_diff_bot

./: README.md
2wd_bot/: CMakeLists.txt  package.xml
dd_2wd_bot/: CMakeLists.txt  package.xml
dd_2wd_bot/description/: robot.urdf.xacro  robot_body.xacro
dd_2wd_bot/launch/: robot.launch.py
